--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,101 @@
   background-size: cover;
   background-position: center center;
 }
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  transform: scale(0.65);
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #02295a;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #02295a;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.addCheck[type=checkbox] {
+  position: relative;
+  cursor: pointer;
+}
+
+.addCheck[type=checkbox]:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width:  20px;
+  height: 20px;
+  top: -3px;
+  left: 0;
+  background-color: #ffffff;
+  border: 1px solid rgb(92, 92, 92);
+}
+
+.addCheck[type=checkbox]:checked:after {
+  content: "";
+  display: block;
+  width: 7px;
+  height: 14px;
+  border: solid rgb(255, 255, 255);
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: -2px;
+  left: 7px;
+}
+
+.addCheck[type=checkbox]:checked:before {
+  background-color: #473dff;
+  border: none;
+}
